# Pythia

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  audit_em_convergence.json  audit_em_convergence.py  forecast.bat  lessons.txt  lessons_history.jsonl  pyproject.toml  reflect.bat  resolve.bat  review.bat  summary.md  three-week-checkin.bat  why.bat
pythia/: __init__.py  baselines.py  calibrate.py  cli.py  config.py  dashboard.py  data.py  digest.py  forecaster.py  hmm_baseline.py  hmm_health.py  kalshi.py  macro.py  notify.py  paper.py  pnl.py  reflect.py  scoring.py  storage.py
tests/: test_calendar.py  test_calibrate.py  test_dashboard.py  test_digest.py  test_hmm_baseline.py  test_hmm_health.py  test_kalshi.py  test_macro.py  test_notify.py  test_paper.py  test_pnl.py  test_reflect.py  test_scoring.py  test_transport.py
