[project]
name = "pythia"
version = "0.4.0"
description = "Pythia — a self-grading market forecaster: forms falsifiable, time-boxed ETF predictions, logs them before the outcome is known, and grades itself against real prices."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "yfinance>=0.2.40",
    "pandas>=2.2",
    "pandas-market-calendars>=4.4",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
pythia = "pythia.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pythia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
